2014-07-14  Karl Berry  <karl@gnu.org>

	* Makefile (tex4ht_4ht_derived): add titlesec.4ht.
	(titlesec 2005) <\ttl:straight@i>: use {#2} in case arg contains
	brackets.  From Michal Hoftich.
	http://tex.stackexchange.com/q/185866/
	http://puszcza.gnu.org.ua/bugs/?215

2014-07-13  Karl Berry  <karl@gnu.org>

	* Makefile (tex4ht_4ht_derived): add listings.4ht.
	* tex4ht-4ht.tex (listings.4ht): handle listings' escapechar
	feature. From Michal Hoftich.
	http://tex.stackexchange.com/q/188322/2891
	http://puszcza.gnu.org.ua/bugs/?221

2014-07-13  Karl Berry  <karl@gnu.org>

	* Makefile (tex4ht_4ht_derived): add tocloft.4ht.
	* tex4ht-4ht.tex (tocloft.4ht): new generated file,
	to turn off tocloft toc's.  Fix from Michal Hoftich.
	http://tex.stackexchange.com/q/190991/2891
	http://puszcza.gnu.org.ua/bugs/?220

	* tex4ht-4ht.tex (TeX4ht license text): new macro without
	copyright line, used in the new .4ht file.
	(TeX4ht copyright): use that after the copyright line.

2014-06-27  Karl Berry  <karl@gnu.org>

	* tex4ht-4ht.tex (mwcls divs): omit error if not in vertical mode
	in mwbk.cls. Report from Sylwester Arabas, fix from Deimantas Galcius.
	http://puszcza.gnu.org.ua/bugs/?214

2014-06-27  Karl Berry  <karl@gnu.org>

	* tex4ht-fonts-noncjk.tex,
	* tex4ht-mathltx.tex,
	* tex4ht-mathml.tex: copyright years and notices.

2014-06-26  Chris Horler  <cshorler@googlemail.com>

	* tex4ht-mathltx.tex,
	* tex4ht-mathml.tex: use different align= values
	instead of CSS text-align: values, per current standards.
	Affects mathltx.4ht and mathml.4ht.
	https://puszcza.gnu.org.ua/bugs/?219
	
2014-06-26  Karl Berry  <karl@gnu.org>

	* Makefile (tex4ht_mathml_derived): new variable and target,
	for tex4ht-mathml.tex.

	* Makefile (tex4ht_fonts_noncjk_derived): evidently lm-htf.tex
	is created from tex4ht-fonts-noncjk.tex, but not cmtex.htf.
	Don't see where/how cmtex.htf is created.

2014-05-22  Karl Berry  <karl@gnu.org>

	* tex4ht-4ht.tex (shared url): must use definition